# Agro-cli

./: .dockerignore  .env  .env.example  .gitignore  .npmignore  AI_PROVIDER_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FULLY_INTEGRATED_REALTIME.md  LICENSE  LIVE_TERMINAL_FEATURES.md  QUICKSTART.md  README.md  REALTIME_IMPLEMENTATION_SUMMARY.md  REALTIME_SETUP.md  SERVER_OUTPUT_FIX.md  START_REALTIME.md  TESTING_GUIDE.md  TUI_IMPROVEMENTS.md  TUI_KEY_HANDLING_FIX.md  WEB_ACCESS_GUIDE.md  WEB_DASHBOARD_TROUBLESHOOTING.md  all_clippy_errors.txt  bench_error.json  bench_error_utf8.json  build_error.txt  build_error_v2.txt  build_output.txt  cargo_check_errors.txt  cargo_output.txt  clippy_detailed_errors.txt  clippy_errors.txt  clippy_final_error.txt  clippy_last_3_errors.txt  clippy_last_error.txt  (+14 more)
benches/: db_bench.rs
core/: cli_realtime.py  database.py  engine.py  events.py  realtime.py  weather.py
hardware/: pump.py  sensors.py
scripts/: create_beads_ratatui.sh  install.js
src/: lib.rs  main.rs  tui.rs
src/ai/: mod.rs  mod.rs.bak
src/core/: mod.rs
src/db/: mod.rs
src/hardware/: mod.rs
src/telegram/: mod.rs
src/web/: mod.rs
static/: app.js  index.html  style.css
web/: server.py  server_old.py  server_secure_backup.py
